# Generated by Django 6.0.4 on 2026-05-04 21:09

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='Utilisateur',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('telephone', models.CharField(help_text='Format +237XXXXXXXXX', max_length=15, unique=True)),
                ('nom', models.CharField(max_length=100)),
                ('prenom', models.CharField(max_length=100)),
                ('role', models.CharField(choices=[('eleve', 'Élève'), ('parent', 'Parent'), ('admin', 'Administrateur')], default='eleve', max_length=10)),
                ('date_inscription', models.DateTimeField(auto_now_add=True)),
                ('niveau', models.CharField(blank=True, choices=[('3eme', '3ème (BEPC)'), ('Tle_C', 'Terminale C (BAC)')], max_length=10)),
                ('date_examen', models.DateField(blank=True, help_text='Date cible du BEPC ou BAC', null=True)),
                ('heures_par_jour', models.PositiveSmallIntegerField(default=2, help_text="Heures d'étude disponibles par jour (1-10)")),
                ('firebase_token', models.CharField(blank=True, help_text='Token FCM mis à jour à chaque connexion mobile', max_length=255)),
                ('is_active', models.BooleanField(default=True)),
                ('is_staff', models.BooleanField(default=False)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'Utilisateur',
                'verbose_name_plural': 'Utilisateurs',
            },
        ),
        migrations.CreateModel(
            name='LienParentEleve',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date_lien', models.DateTimeField(auto_now_add=True)),
                ('eleve', models.ForeignKey(limit_choices_to={'role': 'eleve'}, on_delete=django.db.models.deletion.CASCADE, related_name='parents', to=settings.AUTH_USER_MODEL)),
                ('parent', models.ForeignKey(limit_choices_to={'role': 'parent'}, on_delete=django.db.models.deletion.CASCADE, related_name='enfants', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Lien Parent-Élève',
                'verbose_name_plural': 'Liens Parent-Élève',
                'unique_together': {('parent', 'eleve')},
            },
        ),
    ]
